--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -165,6 +165,29 @@ a
     transform: translateY(-50%)
     width: $size
 
+// ----- Brand ----- //
+
+.brand
+  display: block
+  text-align: center
+
+.brand--bottom
+  margin-top: $b-space-l
+  opacity: 0.45
+  transition: $b-transition
+
+  &:active,
+  &:focus,
+  &:hover
+    opacity: 1
+
+.brand--top
+  margin-bottom: $b-space-l
+
+.brand-img
+  display: block
+  margin: 0 auto
+
 // ----- Button ----- //
 
 .btn
