--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -54,6 +54,9 @@ $b-transition: 0.2s ease-in-out
 //   Tools
 // -------------------------------------
 
+.mbm
+  margin-bottom: $b-space
+
 .tac
   text-align: center
 
