--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -9,7 +9,7 @@
 //   Imports
 // -------------------------------------
 
-@import 'http://fonts.googleapis.com/css?family=Open+Sans:400,700'
+@import 'http://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
 @import 'reset'
 
 // -------------------------------------
@@ -96,6 +96,7 @@ h4, .h4
 
 h1, .h1
   font-size: $b-fontSize-h1
+  font-weight: 300
   margin-bottom: $b-space
 
 h2, .h2
