Add transition to answer icon

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -167,6 +167,7 @@ a
     position: absolute
     top: 50%
     transform: translateY(-50%)
+    transition: $b-transition
     width: $size
 
 // ----- Brand ----- //
