Update cell spacing

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -245,8 +245,7 @@ a
 // ----- Cell ----- //
 
 .cell
-  margin: 0 auto
-  margin-top: $b-space-xl
+  margin: $b-space-l auto $b-space-xl
   max-width: $b-maxWidth
 
 // ----- Share ----- //
