Fix wrong variable for html tag font-size

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -73,7 +73,7 @@ html
   background: $c-background
   color: $c-text
   font-family: $b-fontFamily
-  font-size: $b-fontFamily
+  font-size: $b-fontSize
 
 body
   font-size: 100%
