Add image component

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -265,9 +265,11 @@ a
 // ----- Character ----- //
 
 .character
+  opacity: 0
+
+.character.is-loaded
   animation: bounceIn 1s 0.2s
   animation-fill-mode: forwards
-  opacity: 0
 
 // ----- Main ----- //
 
