--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -13,6 +13,22 @@
 @import 'reset'
 
 // -------------------------------------
+//   Helpers
+// -------------------------------------
+
+// ----- Respond-to ----- //
+// -> Generates a media query
+//
+// $val - the breakpoint size
+// $query - the type of query ('min-width', 'max-width')
+// $media - the media type ('screen', 'print', etc.)
+// @content - the generated content within the mixin
+
+=respond-to($val, $query: min-width, $media: screen)
+  @media #{$media} and ($query: $val)
+    @content
+
+// -------------------------------------
 //   Variables
 // -------------------------------------
 
@@ -37,6 +53,7 @@ $b-borderWidth: 2px
 $b-borderStyle: solid
 $b-border: $b-borderWidth $b-borderStyle $c-border
 $b-borderRadius: 6px
+$b-breakpoint-m: 768px
 $b-fontFamily: 'Open Sans', Helvetica, Arial, sans-serif
 $b-fontSize: 16px
 $b-fontSize-h1: 200%
@@ -65,6 +82,11 @@ $b-transition: 0.2s ease-in-out
 .tci
   color: $c-text-invert
 
++respond-to($b-breakpoint-m)
+
+  .tal--m
+    text-align: left
+
 // -------------------------------------
 //   Base
 // -------------------------------------
@@ -88,8 +110,7 @@ li
 
 h1, .h1,
 h2, .h2,
-h3, .h3,
-h4, .h4
+h3, .h3
   font-family: $b-fontFamily
   font-weight: 700
   line-height: 1.2
@@ -102,14 +123,17 @@ h1, .h1
   margin-bottom: $b-space
 
 h2, .h2
-  font-size: $b-fontSize-h2
+  font-size: $b-fontSize-h3
   margin-bottom: $b-space-s
 
-h3, .h3
-  font-size: $b-fontSize-h3
+  +respond-to($b-breakpoint-m)
+    font-size: $b-fontSize-h2
 
-h4, .h4
+h3, .h3
   font-size: $b-fontSize-h4
+
+  +respond-to($b-breakpoint-m)
+    font-size: $b-fontSize-h3
 
 a
   color: $c-primary
@@ -120,6 +144,10 @@ a
   &:focus,
   &:hover
     color: darken($c-primary, 10%)
+
+img
+  display: block
+  max-width: 100%
 
 // -------------------------------------
 //   Modules
@@ -141,9 +169,13 @@ a
   border-radius: $b-borderRadius
   color: $c-text
   display: block
+  font-size: 90%
   padding: $b-space-s
   padding-left: $b-space-l
   position: relative
+
+  +respond-to($b-breakpoint-m)
+    font-size: 100%
 
   &:active,
   &:focus,
@@ -242,9 +274,11 @@ a
 // ----- Card ----- //
 
 .card
-  border-radius: $b-borderRadius
   padding: $b-space
   position: relative
+
+  +respond-to($b-breakpoint-m)
+    border-radius: $b-borderRadius
 
 .card--a
   background: $c-background-invert
@@ -254,7 +288,10 @@ a
   border: $b-border
 
 .card--l
-  padding: $b-space-l
+  padding: $b-space
+
+  +respond-to($b-breakpoint-m)
+    padding: $b-space-l
 
 // ----- Cell ----- //
 
@@ -281,7 +318,11 @@ a
 // ----- Share ----- //
 
 .share-link
-  margin-right: $b-space-s
+  text-align: center
+
+  +respond-to($b-breakpoint-m)
+    margin-right: $b-space-s
+    text-align: left
 
   &:last-child
     margin-right: 0
