Add bottom spacing to share link

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -319,9 +319,11 @@ img
 // ----- Share ----- //
 
 .share-link
+  margin-bottom: $b-space-s
   text-align: center
 
   +respond-to($b-breakpoint-m)
+    margin-bottom: 0
     margin-right: $b-space-s
     text-align: left
 
