Delay loading of share component

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -318,6 +318,13 @@ img
 
 // ----- Share ----- //
 
+.share
+  opacity: 0
+  transition: 0.4s 1s ease-in-out
+
+.share.is-loaded
+  opacity: 1
+
 .share-link
   margin-bottom: $b-space-s
   text-align: center
