Add landing page copy

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -82,6 +82,8 @@ $b-transition: 0.2s ease-in-out
 
 .mbm
   margin-bottom: $b-space
+.mbl
+  margin-bottom: $b-space-l
 
 .tac
   text-align: center
@@ -106,6 +108,7 @@ html
   color: $c-text
   font-family: $b-fontFamily
   font-size: $b-fontSize
+  line-height: $b-lineHeight
 
 body
   font-size: 100%
